overlapped in projects fixed

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -31,14 +31,3 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
-/*Experience  */
-.experience {
-  direction: center;
-  padding-top: 110px;
-  text-align: center;
-  padding-bottom: 130px;
-  padding-left: 43px;
-
-  /* background-color: rgb(207, 222, 244); */
-}
